Fixed file dropzone label going off screen

--- a/src/app/bookshelf/book-list/book-list-dropzone/book-list-dropzone.component.scss
+++ b/src/app/bookshelf/book-list/book-list-dropzone/book-list-dropzone.component.scss
@@ -14,6 +14,7 @@
 
 .dropdown-hint {
     @include m.absolute-full-center();
+    position: fixed;
 
     max-height: 150px;
     max-width: 150px;
